--- a/CustomMapMarker/Info.plist
+++ b/CustomMapMarker/Info.plist
@@ -46,5 +46,9 @@
 		<string>googlechromes</string>
 		<string>comgooglemaps</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>beat-iconfont.ttf</string>
+	</array>
 </dict>
 </plist>
