--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
       # Drafts your next Release notes as Pull Requests are merged into "develop"
       - uses: release-drafter/release-drafter@v5.9.0
+        with:
+         config-name: release-drafter.yml
+           # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
+           # config-name: my-config.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
